[gd_scene load_steps=5 format=3 uid="uid://c21jbfo7ww31x"]

[ext_resource type="PackedScene" uid="uid://dxr7phpxd7qol" path="res://Scenes/Card/card.tscn" id="1_mv0hc"]
[ext_resource type="Script" uid="uid://ci2dpyf87xojq" path="res://Scenes/Game/game.gd" id="1_qxfds"]
[ext_resource type="FontFile" uid="uid://g6hwsrh5md1m" path="res://Assets/Fonts/OldNewspaperTypes-Regular.ttf" id="3_qikps"]

[sub_resource type="Theme" id="Theme_i1e5p"]
default_font = ExtResource("3_qikps")
default_font_size = 50

[node name="Game" type="Node2D"]
script = ExtResource("1_qxfds")
card_scene = ExtResource("1_mv0hc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeckContainer" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchor_left = 0.025
anchor_top = 0.3
anchor_right = 0.15
anchor_bottom = 0.51
grow_vertical = 2

[node name="CardsCount" type="Label" parent="CanvasLayer/Control/DeckContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.229
anchor_right = 0.234
offset_left = -16.848
offset_right = 39.152
offset_bottom = 62.0
theme = SubResource("Theme_i1e5p")
text = "36"
vertical_alignment = 1

[node name="TrumpContainer" type="Control" parent="CanvasLayer/Control/DeckContainer"]
layout_mode = 1
anchor_left = 0.6
anchor_top = 1.0
anchor_right = 0.6
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
rotation = 1.5707964

[node name="PreviewTrump" parent="CanvasLayer/Control/DeckContainer/TrumpContainer" instance=ExtResource("1_mv0hc")]
rank = 8

[node name="CardsContainer" type="Control" parent="CanvasLayer/Control/DeckContainer"]
layout_mode = 1
anchor_left = 0.3
anchor_top = 1.0
anchor_right = 0.7
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="PreviewCard" parent="CanvasLayer/Control/DeckContainer/CardsContainer" instance=ExtResource("1_mv0hc")]
is_face_up = false
